--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -60,6 +60,12 @@ body {
     position: relative;
 }
 
+.grid__column-6 {
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 50%;
+}
+
 
 /* Animation */
 @keyframes fadeIn {
