--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -60,11 +60,27 @@ body {
     position: relative;
 }
 
+.grid__column-4-36px {
+    padding-left: 35px;
+    padding-right: 36px;
+    width: 33.3333%;
+    height: auto;
+    position: relative;
+}
+
 .grid__column-6 {
     padding-left: 12px;
     padding-right: 12px;
     width: 50%;
 }
+
+.grid__column-9 {
+    padding-left: 12px;
+    padding-right: 12px;
+    height: auto;
+    width: 75%;
+}
+
 
 
 /* Animation */
@@ -96,4 +112,8 @@ body {
     color: var(--primary-color);
     cursor: text;
     margin: 40px 0 10px;
+}
+
+.red {
+    color: red;
 }
