--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -81,6 +81,13 @@ body {
     width: 75%;
 }
 
+.grid__column-9-3 {
+    padding-left: 12px;
+    padding-right: 12px;
+    height: auto;
+    width: 33.333%;
+}
+
 
 
 /* Animation */
