--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -124,3 +124,30 @@ body {
 .red {
     color: red;
 }
+
+/* Modal */
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    animation: fadeIn linear 0.1s;
+    display: none;
+}
+
+.modal__overplay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal__body {
+    --growth-form: 0.5;
+    --growth-to: 1;
+    margin: auto;
+    position: relative; 
+    z-index: 1;
+    animation: growth linear 0.1s;
+}
