--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -367,52 +367,56 @@
     padding: 0 6px;
     cursor: pointer;
     position: relative;
+    /* overflow: hidden; */
 }
 
-#searchToggle {
-    /* display: none; */
-}
-
-/* #searchToggle:checked ~ .search-box {
-    display: flex;
-} */
-
-.search-icon-label {
+.search-icon {
     cursor: pointer;
     display: block;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .search-box {
     position: absolute;
-    top: 4px;
-    right: 6px;
+    top: 6px;
+    right: 0;
     background-color: var(--white-color);
     box-sizing: border-box;
-    z-index: 1;
+    z-index: 2;
     height: 20px;
-    width: 0;
-    display: none;
-    animation: searchInput ease-in 1s;
-} 
-
-.search-icon-label:focus .search-box {
-    display: block;
+    border-radius: 4px;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
 }
 
-#searchInput {
-    width: 160px;
+#searchInput {  
+    width: 220px;
     line-height: 2rem;
     border: none;
-}
-
-#searchInput:focus {
+    border-radius: 4px;
+    padding: 4px 30px 4px 6px;
     outline: none;
 }
 
+.header__navbar-seach--active .search-box{
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.search-close-icon {
+    position: absolute;
+    z-index: 2;
+    top: 7px;
+    right: 5px;
+    font-weight: 800;
+    font-size: 1.4rem;
+    color: var(--black-color);
+    padding: 0 6px 0 8px;
+}
 
 /* Container */
 .container__background {
@@ -562,17 +566,14 @@
     color: var(--primary-color);    
 }
 
-.vehicle-list__item.vehicle-list__item--active::after {
-    content: "";
+.slider {
     position: absolute;
     bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: calc(100% + 14px);
     height: 3px;
     background-color: var(--primary-color);
     z-index: 1;
-    transition: width 0.3s ease, background-color 0.3s ease, left 0.3s ease, transform 0.3s ease;
+    transition: transform 0.3s ease , width 0.3s ease;
+    left: 0;
 }
 
 .vehicle-item {
@@ -897,4 +898,61 @@
 .go-to-header-icon {
     font-size: 2rem;
     font-weight: 1000;
+}
+
+/* Modal */
+.modal.modal-show {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-contact {
+    background-color: var(--white-color);
+    height: 360px;
+    width: 660px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.modal-contact-icon {
+    font-size: 4rem;
+    color: var(--white-color);
+    background-color: var(--primary-color);
+    border-radius: 34px;
+    padding: 10px;
+}
+
+.modal-contact-heading {
+    font-size: 2.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 40px 0;
+    color: var(--primary-color);
+}
+
+.modal-contact-label {
+    display: block;
+    letter-spacing: 0.2px;
+    font-size: 1.8rem;
+    color: var(--text-color);
+    width: 500px;
+    text-align: center;
+}
+
+.modal-contact-btn {
+    margin-top: 40px;
+    padding: 12px 50px;
+    border-radius: 4px;
+    border: none;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    cursor: pointer;
+}
+
+.modal-contact-btn:hover {
+    background-color: #2d0eb7;
 }
