--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,8 @@
     width: 100%;
     padding-top: 60px;
     box-sizing: border-box;
+    z-index: 10;
+    position: relative;
 }
 
 .header__navbar {
@@ -941,6 +943,7 @@
     color: var(--text-color);
     width: 500px;
     text-align: center;
+    line-height: 2.6rem;
 }
 
 .modal-contact-btn {
@@ -955,4 +958,137 @@
 
 .modal-contact-btn:hover {
     background-color: #2d0eb7;
+}
+
+
+/* Advertisement */
+.advertisement {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    animation: fadeIn linear 0.1s;
+    z-index: 20;
+    display: none;
+    justify-content: center;
+}
+
+.advertisement.advertisement--active {
+    display: block;
+}
+
+.ad__overplay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.ad__body {
+    --growth-form: 0.5;
+    --growth-to: 1;
+    margin: auto;
+    position: relative; 
+    z-index: 1;
+    animation: growth linear 0.1s;
+    background-color: rgb(0, 174, 255);
+    max-height: 100vh;
+    width: 50vw;
+    z-index: 21;
+    overflow-y: auto;
+}
+
+.ad__header {
+    color: var(--white-color);
+    font-size: 2.8rem;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 0.3px;
+    margin: 24px 0;
+}
+
+.ad__container {
+    padding: 10px 0;
+    margin: 0;
+    background-color: var(--primary-color);
+}
+
+.ad__background-img {
+    height: 360px;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.ad__form-input {
+    margin-top: 24px;
+}
+
+.ad__grid {
+    width: 100%;
+    margin: 0 auto;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.ad__row {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+}
+
+.ad__column-6 {
+    padding: 0 16px;
+    margin: 10px 0;
+    width: 50%;
+    flex: 1;
+    box-sizing: border-box;
+}
+
+input {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 6px;
+    border: 1px solid #ccc;
+}
+
+#daily {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 6px;
+    border: 1px solid #ccc;
+}
+
+#textarea {
+    width: calc(96% + 4px);
+    margin: 0 12px;
+    /* padding: 0 6px;  */
+    height: 77px;
+    color: var(--text-color);
+    font-size: 1.7rem;
+    letter-spacing: 0.1px;
+    line-height: 2.2rem;
+    box-sizing: border-box;
+} 
+
+.ad__btn {
+    margin-top: 12px;
+    margin-left: 16px;
+    height: 28px;
+    width: 160px;
+    font-size: 1.6rem;
+    cursor: pointer;
+}
+
+.ad-close-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1.4rem;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    padding: 10px;
+    cursor: pointer;
 }
