--- a/assets/css/motobike-product.css
+++ b/assets/css/motobike-product.css
@@ -1,7 +1,3 @@
-.container {
-    margin-bottom: 100px;
-}
-
 .product__main-background {
     height: 400px;
     width: 1200px;
@@ -119,13 +115,13 @@
 }
 
 .element-list-item-info {
-    display: flex;
-    justify-content: space-evenly; 
+    display: flex; 
     align-items: center;
+    margin: 4px 0;
 }
 
 .element-item-label {
-    /* flex: 1; */
+    flex: 1;
     font-size: 1.7rem;
     color: var(--text-color);
     letter-spacing: 0.2px;
@@ -135,7 +131,7 @@
 }
 
 .element-item-value {
-    /* flex: 1; */
+    flex: 1;
     font-size: 1.6rem;
     color: var(--text-color);
     font-weight: 600;
