--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -20,14 +20,19 @@ html {
 }
 
 body {
-    padding: 0;
+    padding: 0; 
     margin: 0;
+    overflow-x: hidden;
+}
+
+.main {
+    padding-top: 60px;
 }
 
 /*Reponsive*/
 .grid {
-    max-width: 100%;
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
