--- a/assets/css/khuyenmai_hondash160i.css
+++ b/assets/css/khuyenmai_hondash160i.css
@@ -20,7 +20,8 @@
 }
 
 .khuyenmai_hondash160i-info {
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     margin: 0 auto 100px;
 }
 
@@ -42,10 +43,12 @@
     line-height: 3.8rem;
     font-weight: 600;
     margin-bottom: 12px;
+    max-width: 100%;
 }
 
 .khuyenmai_hondash160i-title-description {
     width: 700px;
+    max-width: 100%;
     font-size: 1.5rem;
     color: var(--text-color);
     line-height: 2.2rem;
@@ -63,7 +66,8 @@
 }
 
 .khuyenmai_hondash160i-content {
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     position: relative;
     margin-bottom: 100px;
@@ -123,7 +127,8 @@
 }
 
 .khuyenmai_hondash160i-gift {
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
     padding: 0;
 }
@@ -151,4 +156,83 @@
 .khuyenmai_hondash160i-gift-item {
     font-size: 1.5rem;
     line-height: 2.5rem;
+}
+
+@media screen and (max-width: 47.9375em) {
+    .khuyenmai_hondash160i-container-main-background {
+        height: 300px;
+        background-size: cover;
+    }
+
+    .khuyenmai_hondash160i-content,
+    .khuyenmai_hondash160i-gift,
+    .khuyenmai_hondash160i-info {
+        width: 100%;
+        padding: 0 12px;
+        margin: 0 auto 40px;
+    }
+
+
+    .khuyenmai_hondash160i-heading {
+        font-size: 2.6rem;
+    }
+
+    .khuyenmai_hondash160i-info {
+        width: 100%;
+        margin-bottom: 40px;
+        padding: 0 12px;
+        box-sizing: border-box;
+    }
+
+    .khuyenmai_honda160i-name {
+        margin-left: 12px;
+    }
+
+    .khuyenmai_honda160i-description {
+        margin: 0 12px;
+        max-width: 100%; 
+    }
+
+    .khuyenmai_hondash160i-title {
+        font-size: 2.4rem;
+        max-width: 100%;
+    }
+
+    .khuyenmai_hondash160i-title-description {
+        width: auto;
+        max-width: 100%;
+        margin: 0 12px;
+    }
+
+    .khuyenmai_hondash160i-title-description::before {
+        width: 100%;
+    }
+
+    .khuyenmai_hondash160i-content {
+        max-width: 100%;
+        margin-top: 70px;
+    }
+
+    .khuyenmai_hondash160i-content-info {
+        font-size: 1.6rem;
+    }
+
+    .khuyenmai_hondash160i-content-time {
+        font-size: 1.5rem;
+    }
+
+    .khuyenmai_hondash160i-gift-name {
+        margin-top: 70px;
+    }
+
+    .khuyenmai_hondash160i-content::before {
+        width: 90%;
+        bottom: -40px;
+        left: 10px;
+        border-bottom: 1px solid var(--primary-color);
+    }
+
+    .khuyenmai_hondash160i-gift {
+        margin-bottom: 0;
+    }
 }
