--- a/assets/css/khuyenmai_yamahaR15V3.css
+++ b/assets/css/khuyenmai_yamahaR15V3.css
@@ -135,3 +135,32 @@
     font-weight: 400;
     text-decoration: line-through;
 }
+
+@media screen and (max-width: 47.9375em) {
+    .khuyenmai_yamahar15v3-container-main-background {
+        height: 300px;
+        background-size: contain;
+    }
+
+    .khuyenmai_yamahar15v3-info {
+        /* margin: 0 6px; */
+        max-width: 100%;
+    }
+
+    .khuyenmai_yamahar15v3-name {
+        margin-left: 12px;
+    }
+
+    .khuyenmai_yamahar15v3-description {
+        margin: 0 12px;
+    }
+
+    .khuyenmai_yamahar15v3-guarantee {
+        max-width: 100%;
+        height: 110px;
+    }
+
+    .khuyenmai_yamahar15v3-guarantee::after {
+        height: 108px;
+    }
+}
